<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BD Autos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="serie">Serie del Automovil</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="color">Color</string>
    <string name="alta">Alta</string>
    <string name="baja">Baja</string>
    <string name="consulta">Consultar</string>
    <string name="modificar">Modificar</string>
    <string name="limpiar">Limpiar</string>
    <string name="registro">Registros</string>
    <string name="title_activity_registros">registros</string>

</resources>
